travis test from sdist on linux/py27

--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,10 @@ matrix:
         - os: linux
           env: TEST_DEPS="flake8" PYTHON_VERSION="2.7" PYTHON_ARCH="64" TEST_RUN="style"
 
+        # install from sdist
+        - os: linux
+          env: TEST_DEPS="numpy pandas tables scikit-learn nose" PYTHON_VERSION="2.7" PYTHON_ARCH="64" TEST_RUN="sdist"
+
 before_install:
     - uname -a
     - source "tools/travis/conda_setup.sh"
