--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ matrix:
 
         # install from sdist
         - os: linux
-          env: TEST_DEPS="numpy pandas tables scikit-learn nose" PYTHON_VERSION="2.7" PYTHON_ARCH="64" TEST_RUN="sdist"
+          env: TEST_DEPS="numpy pandas pytables scikit-learn nose" PYTHON_VERSION="2.7" PYTHON_ARCH="64" TEST_RUN="sdist"
 
 before_install:
     - uname -a
