--- a/.travis.yml
+++ b/.travis.yml
@@ -9,12 +9,25 @@ matrix:
         - os: linux
           env: TEST_DEPS="flake8" PYTHON_VERSION="2.7" PYTHON_ARCH="64" TEST_RUN="style"
 
-        # install from sdist
+        # python 2.7; install from sdist
         - os: linux
           env: TEST_DEPS="numpy pandas pytables scikit-learn nose"
                PYTHON_VERSION="2.7"
                PYTHON_ARCH="64"
                TEST_RUN="sdist"
+
+        # python 3.5; install from sdist
+        - os: linux
+          env: TEST_DEPS="numpy pandas pytables scikit-learn nose"
+               PYTHON_VERSION="3.5"
+               PYTHON_ARCH="64"
+               TEST_RUN="sdist"
+
+        # python 3.6
+        - os: linux
+          env: TEST_DEPS="numpy pandas pytables scikit-learn nose"
+               PYTHON_VERSION="3.5"
+               PYTHON_ARCH="64"
 
 before_install:
     - uname -a
