--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,10 @@ matrix:
 
          # flake8
         - os: linux
-          env: TEST_DEPS="flake8" PYTHON_VERSION="2.7" PYTHON_ARCH="64" TEST_RUN="style"
+          env: TEST_DEPS="flake8"
+               PYTHON_VERSION="2.7"
+               PYTHON_ARCH="64"
+               TEST_RUN="style"
 
         # python 2.7; install from sdist
         - os: linux
@@ -25,6 +28,26 @@ matrix:
 
         # python 3.6
         - os: linux
+          env: TEST_DEPS="numpy pandas pytables scikit-learn nose"
+               PYTHON_VERSION="3.6"
+               PYTHON_ARCH="64"
+
+        # python 2.7; osx
+        - os: osx
+          env: TEST_DEPS="numpy pandas pytables scikit-learn nose"
+          env: TEST_DEPS="numpy==1.12.1 nose"
+               PYTHON_VERSION="2.7"
+               PYTHON_ARCH="64"
+               TEST_RUN="sdist"
+
+        # python 3.5; osx
+        - os: osx
+          env: TEST_DEPS="numpy pandas pytables scikit-learn nose"
+               PYTHON_VERSION="3.5"
+               PYTHON_ARCH="64"
+
+        # python 3.6; osx
+        - os: osx
           env: TEST_DEPS="numpy pandas pytables scikit-learn nose"
                PYTHON_VERSION="3.6"
                PYTHON_ARCH="64"
