--- a/.travis.yml
+++ b/.travis.yml
@@ -32,25 +32,27 @@ matrix:
                PYTHON_VERSION="3.6"
                PYTHON_ARCH="64"
 
-        # python 2.7; osx
-        - os: osx
-          env: TEST_DEPS="numpy pandas pytables scikit-learn nose"
-          env: TEST_DEPS="numpy==1.12.1 nose"
-               PYTHON_VERSION="2.7"
-               PYTHON_ARCH="64"
-               TEST_RUN="sdist"
+        # osx tests are too slow on travis; remove for now; turn back on
+        # when I stop making so many commits every day
 
-        # python 3.5; osx
-        - os: osx
-          env: TEST_DEPS="numpy pandas pytables scikit-learn nose"
-               PYTHON_VERSION="3.5"
-               PYTHON_ARCH="64"
-
-        # python 3.6; osx
-        - os: osx
-          env: TEST_DEPS="numpy pandas pytables scikit-learn nose"
-               PYTHON_VERSION="3.6"
-               PYTHON_ARCH="64"
+        # # python 2.7; osx
+        # - os: osx
+        # env: TEST_DEPS="numpy pandas pytables scikit-learn nose"
+        # PYTHON_VERSION="2.7"
+        # PYTHON_ARCH="64"
+        # TEST_RUN="sdist"
+        #
+        # # python 3.5; osx
+        # - os: osx
+        # env: TEST_DEPS="numpy pandas pytables scikit-learn nose"
+        # PYTHON_VERSION="3.5"
+        # PYTHON_ARCH="64"
+        #
+        # # python 3.6; osx
+        # - os: osx
+        # env: TEST_DEPS="numpy pandas pytables scikit-learn nose"
+        # PYTHON_VERSION="3.6"
+        # PYTHON_ARCH="64"
 
 before_install:
     - uname -a
